samples/_failures_safe/1761419199_73bece_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d30877a.c: In function ‘main’:
./samples/SAFE/__tmp_6d30877a.c:121:11: error: expected ‘;’ at end of input
  121 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_6d30877a.c:121:5: error: expected declaration or statement at end of input
  121 |     printf
      |     ^~~~~~
